--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "concurrently \"next dev\" \"node server/server.js\"",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
@@ -15,6 +16,7 @@
     "classnames": "^2.5.1",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "framer-motion": "^11.3.19",
     "next": "14.2.5",
     "react": "^18",
     "react-bootstrap": "^2.10.4",
@@ -23,12 +25,19 @@
     "react-redux": "^9.1.2"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.4.8",
+    "@testing-library/react": "^14.0.0",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "axios-mock-adapter": "^1.22.0",
     "concurrently": "^8.2.2",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
+    "jest": "^29.7.0",
+    "redux": "^5.0.1",
+    "ts-jest": "^29.2.3",
     "typescript": "^5"
   }
 }
